--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -22,14 +22,17 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 D:\Temp\01_MC\Meteo\MDK-ARM\usb.uvprojx
-Project File Date:  04/12/2016
+Project File Date:  05/27/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
 compiling main.c...
+../Src/main.c(130): warning:  #223-D: function "PutStringRus" declared implicitly
+        PutStringRus(0,80,buffer,BLACK,GRAY0);
+../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=23396 RO-data=7044 RW-data=460 ZI-data=5572  
-"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=23812 RO-data=5580 RW-data=472 ZI-data=5568  
+"usb Configuration\usb Configuration.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
