--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  05/27/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-compiling My_font.c...
+compiling main.c...
 linking...
-Program Size: Code=19024 RO-data=7152 RW-data=420 ZI-data=5060  
+Program Size: Code=22880 RO-data=5472 RW-data=472 ZI-data=5568  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
