--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -22,14 +22,17 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 D:\Temp\01_MC\Meteo\MDK-ARM\usb.uvprojx
-Project File Date:  06/07/2016
+Project File Date:  06/30/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
 compiling main.c...
+../Src/main.c(124): warning:  #128-D: loop is not reachable
+        while (1)
+../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=25144 RO-data=5472 RW-data=476 ZI-data=5588  
-"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=17896 RO-data=284 RW-data=488 ZI-data=6312  
+"usb Configuration\usb Configuration.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
