--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -27,8 +27,10 @@ Project File Date:  06/30/2016
 <h2>Output:</h2>
 Build target 'usb Configuration'
 compiling main.c...
+compiling LM75_hal.c...
+compiling BMP_graph.c...
 linking...
-usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (33160 bytes) exceeds the maximum allowed for this version of the linker
+usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (32892 bytes) exceeds the maximum allowed for this version of the linker
 Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
 "usb Configuration\usb Configuration.axf" - 1 Error(s), 0 Warning(s).
 
