--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  08/10/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-compiling Init.c...
+compiling main.c...
 linking...
-Program Size: Code=24748 RO-data=5468 RW-data=160 ZI-data=5272  
+Program Size: Code=25168 RO-data=5472 RW-data=160 ZI-data=5272  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
