--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,9 +26,10 @@ Project File Date:  08/22/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
+compiling stm32f1xx_it.c...
 compiling main.c...
 linking...
-Program Size: Code=25608 RO-data=5336 RW-data=160 ZI-data=3800  
+Program Size: Code=25456 RO-data=5336 RW-data=164 ZI-data=6684  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
