--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -27,8 +27,9 @@ Project File Date:  08/22/2016
 <h2>Output:</h2>
 Build target 'usb Configuration'
 compiling main.c...
+compiling Init.c...
 linking...
-Program Size: Code=25696 RO-data=5336 RW-data=176 ZI-data=6656  
+Program Size: Code=25392 RO-data=5336 RW-data=172 ZI-data=6660  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
