--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,11 +26,11 @@ Project File Date:  08/22/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-compiling main.c...
-compiling Init.c...
+compiling My_font.c...
 linking...
-Program Size: Code=25392 RO-data=5336 RW-data=172 ZI-data=6660  
-"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
+usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (35324 bytes) exceeds the maximum allowed for this version of the linker
+Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
+"usb Configuration\usb Configuration.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -48,6 +48,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.1.0
+Target not created.
 </pre>
 </body>
 </html>
