--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,11 +26,10 @@ Project File Date:  08/22/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-compiling My_font.c...
+compiling main.c...
 linking...
-usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (35324 bytes) exceeds the maximum allowed for this version of the linker
-Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
-"usb Configuration\usb Configuration.axf" - 1 Error(s), 0 Warning(s).
+Program Size: Code=16432 RO-data=9740 RW-data=176 ZI-data=5808  
+"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -48,7 +47,6 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.1.0
-Target not created.
 </pre>
 </body>
 </html>
