--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,6 +26,9 @@ Project File Date:  10/21/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
+compiling main.c...
+linking...
+Program Size: Code=19856 RO-data=9740 RW-data=172 ZI-data=5892  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
