--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -22,11 +22,13 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 D:\Temp\01_MC\Meteo\MDK-ARM\usb.uvprojx
-Project File Date:  10/21/2016
+Project File Date:  12/08/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
 compiling main.c...
+compiling BMP_graph.c...
+compiling Hello_screen.c...
 linking...
 Program Size: Code=22132 RO-data=9752 RW-data=168 ZI-data=5936  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
