--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,11 +26,10 @@ Project File Date:  12/08/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
+compiling stm32f1xx_it.c...
 compiling main.c...
-compiling BMP_graph.c...
-compiling Hello_screen.c...
 linking...
-Program Size: Code=22132 RO-data=9752 RW-data=168 ZI-data=5936  
+Program Size: Code=22224 RO-data=9752 RW-data=176 ZI-data=5936  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
