--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,7 +26,11 @@ Project File Date:  12/09/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+linking...
+usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (34516 bytes) exceeds the maximum allowed for this version of the linker
+Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
+"usb Configuration\usb Configuration.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -44,6 +48,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.1.0
+Target not created.
 </pre>
 </body>
 </html>
