SD card detected

--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -28,9 +28,8 @@ Project File Date:  12/09/2016
 Build target 'usb Configuration'
 compiling main.c...
 linking...
-usb Configuration\usb Configuration.axf: error: L6047U: The size of this image (34516 bytes) exceeds the maximum allowed for this version of the linker
-Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
-"usb Configuration\usb Configuration.axf" - 1 Error(s), 0 Warning(s).
+Program Size: Code=20120 RO-data=9740 RW-data=208 ZI-data=5896  
+"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -48,7 +47,6 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.1.0
-Target not created.
 </pre>
 </body>
 </html>
