--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,6 +26,9 @@ Project File Date:  12/09/2016
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
+compiling main.c...
+linking...
+Program Size: Code=20448 RO-data=7820 RW-data=176 ZI-data=5872  
 "usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
