--- a/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
+++ b/MDK-ARM/usb Configuration/usb Configuration.build_log.htm
@@ -26,7 +26,16 @@ Project File Date:  04/23/2017
 
 <h2>Output:</h2>
 Build target 'usb Configuration'
-"usb Configuration\usb Configuration.axf" - 0 Error(s), 0 Warning(s).
+compiling Files.c...
+..\Src\Files.c(242): warning:  #550-D: variable "count_store_data" was set but never used
+        int16_t count_store_data=0;
+..\Src\Files.c(246): warning:  #177-D: variable "try_expand" was declared but never referenced
+        uint8_t try_mount, try_expand;
+..\Src\Files.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=40980 RO-data=8916 RW-data=228 ZI-data=14028  
+FromELF: creating hex file...
+"usb Configuration\usb Configuration.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
